--- a/uomClient/src/app/pages/previewunit/previewunit.component.html
+++ b/uomClient/src/app/pages/previewunit/previewunit.component.html
@@ -1,6 +1,5 @@
-<div class="container mycontent-left">
-    <br>
-<h3>preview panel</h3>
+<div class="mycontent-left container">
+    <h3 class="mt-5 ml-5">preview panel</h3>
 <div class="ml-3">
     <p>ID: {{data.uomkey}}</p>
     <p>Describtion: {{data.uomeDesc}}</p>
