--- a/uomClient/src/app/pages/editunit/editunit.component.html
+++ b/uomClient/src/app/pages/editunit/editunit.component.html
@@ -1,3 +1,5 @@
+<div class="mycontent-left container">
+    <h3 class="mt-5 ml-5">edit panel</h3>
 <form [formGroup]='unitForm' (ngSubmit)="saveChanges()" class="row container-fluid ">
     <div class="mt-3">
         <!-- <div class="col-4">
@@ -15,7 +17,7 @@
             <input placeholder="Caption" id="cap" formControlName="uomeCaption" class="form-control">
         </div>
     </div>
-    <div class="mb-3">
-        <button class="btn btn-primary">Save Changes</button>
-    </div>
+    
+        <button class="btn btn-primary" >Save Changes</button>
 </form>
+</div>
