forgot to push last updates

--- a/uomClient/src/app/pages/previewunit/previewunit.component.html
+++ b/uomClient/src/app/pages/previewunit/previewunit.component.html
@@ -3,7 +3,7 @@
 <div class="ml-3">
     <p>ID: {{data.uomkey}}</p>
     <p>Describtion: {{data.uomeDesc}}</p>
-    <p>UOME_CTEGORY: {{data.uomeCateg}}</p>
+    <p>Category: {{data.uomeCateg}}</p>
     <p>Caption: {{data.uomeCaption}}</p>
     
 </div>
