--- a/uomClient/src/app/pages/recentlyadded/recentlyadded.component.html
+++ b/uomClient/src/app/pages/recentlyadded/recentlyadded.component.html
@@ -1,4 +1,4 @@
-<h4>category {{_service.currentCategory}} is empty try adding some units</h4>
+<h4 class="text-center">category {{_service.currentCategory}} is empty try adding some units</h4>
 <br>
 <form [formGroup]='unitForm' #myForm="ngForm" (ngSubmit)="addcategandunit(); myForm.resetForm()"
             class="row container-fluid ">
