--- a/uomClient/src/app/pages/previewunit/previewunit.component.html
+++ b/uomClient/src/app/pages/previewunit/previewunit.component.html
@@ -1,10 +1,10 @@
 <div class="mycontent-left container">
     <h3 class="mt-5 ml-5">preview panel</h3>
 <div class="ml-3">
-    <p>ID: {{data.uomkey}}</p>
-    <p>Describtion: {{data.uomeDesc}}</p>
-    <p>Category: {{data.uomeCateg}}</p>
-    <p>Caption: {{data.uomeCaption}}</p>
+    <p>ID: {{data?.uomkey}}</p>
+    <p>Describtion: {{data?.uomeDesc}}</p>
+    <p>Category: {{data?.uomeCateg}}</p>
+    <p>Caption: {{data?.uomeCaption}}</p>
     
 </div>
 </div>
